#1826 Fix overlapping footer

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -1527,7 +1527,6 @@ button.close {
 }
 
 #additional, #managers {
-    height: 100vh;
     min-height: 200px;
 }
 
